[gd_scene load_steps=14 format=3 uid="uid://b2g4qw7br436q"]

[ext_resource type="Script" path="res://shop_scene.gd" id="1_fjm7y"]
[ext_resource type="FontFile" uid="uid://kw6m522ffbq8" path="res://MintsodaLimeGreen16X16Regular-EanDl.ttf" id="2_hanwe"]
[ext_resource type="Texture2D" uid="uid://vr6iw2uosjh4" path="res://Sprites/shopman.png" id="2_ou62h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vk0j0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jrbrn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_ws6d5"]
TabBar/styles/button_highlight = SubResource("StyleBoxFlat_vk0j0")
TabBar/styles/tab_focus = SubResource("StyleBoxFlat_jrbrn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uclo0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_hb05h"]
ItemList/styles/focus = SubResource("StyleBoxFlat_uclo0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjd0m"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_ahk11"]
ItemList/styles/focus = SubResource("StyleBoxFlat_rjd0m")

[sub_resource type="Animation" id="Animation_p8637"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bigBlackRectangle:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cut8x"]
resource_name = "fade"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bigBlackRectangle:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtwu2"]
_data = {
"RESET": SubResource("Animation_p8637"),
"fade": SubResource("Animation_cut8x")
}

[node name="ShopScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjm7y")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ou62h")

[node name="TabBar" type="TabBar" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 5.0
offset_right = 490.0
offset_bottom = 45.0
theme = SubResource("Theme_ws6d5")
theme_override_fonts/font = ExtResource("2_hanwe")
current_tab = 0
tab_alignment = 1
tab_count = 2
tab_0/title = "Breads"
tab_1/title = "Furniture"

[node name="breadPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 287.0
offset_top = 45.0
offset_right = 477.0
offset_bottom = 230.0

[node name="breadList" type="ItemList" parent="breadPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hb05h")
theme_override_fonts/font = ExtResource("2_hanwe")

[node name="furniturePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 287.0
offset_top = 45.0
offset_right = 477.0
offset_bottom = 230.0

[node name="furnitureList" type="ItemList" parent="furniturePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ahk11")
theme_override_fonts/font = ExtResource("2_hanwe")

[node name="halfFader" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mtwu2")
}
autoplay = "fade"

[node name="Buy" type="Button" parent="."]
layout_mode = 0
offset_left = 287.0
offset_top = 232.0
offset_right = 375.0
offset_bottom = 266.0
theme_override_fonts/font = ExtResource("2_hanwe")
text = "BUY"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 242.0
offset_top = 1.0
offset_right = 315.0
offset_bottom = 45.0

[node name="costTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.098, 0.2, 0.098, 1)
theme_override_colors/font_shadow_color = Color(0.313726, 0.231373, 0.231373, 0.270588)
theme_override_fonts/font = ExtResource("2_hanwe")
text = "Cost:"
horizontal_alignment = 1

[node name="cost" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.095, 0.19, 0.095, 1)
theme_override_colors/font_shadow_color = Color(0.313726, 0.231373, 0.231373, 0.270588)
theme_override_fonts/font = ExtResource("2_hanwe")
text = "0$"
horizontal_alignment = 1

[node name="Pass" type="Button" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 232.0
offset_right = 476.0
offset_bottom = 266.0
theme_override_fonts/font = ExtResource("2_hanwe")
text = "LEAVE"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 91.0
offset_bottom = 40.0

[node name="money" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.792157)
theme_override_fonts/font = ExtResource("2_hanwe")
text = "Money Dol"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bigBlackRectangle" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="item_selected" from="breadPanel/breadList" to="." method="_on_bread_list_item_selected"]
[connection signal="item_selected" from="furniturePanel/furnitureList" to="." method="_on_furniture_list_item_selected"]
[connection signal="animation_finished" from="halfFader" to="." method="_on_half_fader_animation_finished"]
[connection signal="pressed" from="Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Pass" to="." method="_on_pass_pressed"]
